fixed alignment and tweaked player

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,12 @@
     width: 33.33%
 }
 
+aside {
+  width: 33.3%;
+  padding-right: 15px;
+  float: left;
+}
+
 .col-5 {
     width: 41.66%
 }
@@ -112,7 +118,7 @@ body {
     margin: 5px;
 }
 
-aside table {
+aside > table {
     width: 100%;
 }
 
@@ -126,7 +132,7 @@ table, .orangeTableHeader, .tableHeader, .profileTable {
 }
 
 .profileTable {
-    width: 57%;
+    width: 66.6%;
 }
 
 .tableHeader {
@@ -196,16 +202,17 @@ h1 {
 }
 
 #musicButton {
-    width: 20%;
+    width: 25%;
+    margin-left: -1px;
 }
 
 #musicButton button {
     border: 1px solid black;
     text-align: center;
-    padding: 2px;
+    padding: 10px;
     text-decoration: none;
     display: inline-block;
-    font-size: 40px;
+    font-size: 60px;
     height: 100%;
     width: 100%;
     border-radius: 100%;
@@ -216,7 +223,7 @@ h1 {
     border: 1px solid purple;
     padding: 15px;
     float: right;
-    width: 75%;
+    width: 72%;
     background-color:rgb(46, 46, 46);
     color: rgb(129, 129, 129);
     font-size: 48px;
